--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -596,7 +596,34 @@
        " 'Rytigynia senegalensis',\n",
        " 'Saba comorensis',\n",
        " 'Saba senegalensis',\n",
-       " 'Salix subserrata']"
+       " 'Salix subserrata',\n",
+       " 'Salvadora persica',\n",
+       " 'Sapium ellipticum',\n",
+       " 'Sarcocephalus latifolius',\n",
+       " 'Sarcostemma viminale',\n",
+       " 'Sclerocarya birrea',\n",
+       " 'Securidaca longipedunculata',\n",
+       " 'Senna alata',\n",
+       " 'Senna siamea',\n",
+       " 'Senna singueana',\n",
+       " 'Sericanthe chevalieri',\n",
+       " 'Sesbania sesban',\n",
+       " 'Smilax anceps',\n",
+       " 'Spondias monbin',\n",
+       " 'Steganotaenia araliacea',\n",
+       " 'Sterculia setigera',\n",
+       " 'Stereospermum kunthianum',\n",
+       " 'Strophanthus sarmentosus',\n",
+       " 'Strychnos innocua',\n",
+       " 'Strychnos spinosa',\n",
+       " 'Swartzia madagascariensis',\n",
+       " 'Syzygium guineense (2 ss sp)',\n",
+       " 'Tacazzea apiculata',\n",
+       " 'Tamarindus indica',\n",
+       " 'Tamarix senegalensis',\n",
+       " 'Tapinanthus dodoneifolius',\n",
+       " 'Tapinanthus globiferus',\n",
+       " 'Tapinanthus pentagonia']"
       ]
      },
      "execution_count": 6,
@@ -919,19 +946,46 @@
       "Rytigynia senegalensis done\n",
       "Saba comorensis done\n",
       "Saba senegalensis done\n",
-      "Salix subserrata done\n"
+      "Salix subserrata done\n",
+      "Salvadora persica done\n",
+      "Sapium ellipticum done\n",
+      "Sarcocephalus latifolius done\n",
+      "Sarcostemma viminale done\n",
+      "Sclerocarya birrea done\n",
+      "Securidaca longipedunculata done\n",
+      "Senna alata done\n",
+      "Senna siamea done\n",
+      "Senna singueana done\n",
+      "Sericanthe chevalieri done\n",
+      "Sesbania sesban done\n",
+      "Smilax anceps done\n",
+      "Spondias monbin done\n",
+      "Steganotaenia araliacea done\n",
+      "Sterculia setigera done\n",
+      "Stereospermum kunthianum done\n",
+      "Strophanthus sarmentosus done\n",
+      "Strychnos innocua done\n",
+      "Strychnos spinosa done\n",
+      "Swartzia madagascariensis done\n",
+      "Syzygium guineense (2 ss sp) done\n",
+      "Tacazzea apiculata done\n",
+      "Tamarindus indica done\n",
+      "Tamarix senegalensis done\n",
+      "Tapinanthus dodoneifolius done\n",
+      "Tapinanthus globiferus done\n",
+      "Tapinanthus pentagonia done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 89%|████████▉ | 321/361 [00:41<00:05,  7.65it/s] \n"
+      " 96%|█████████▋| 348/361 [00:43<00:01,  8.07it/s] \n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Tapinanthus+pentagonia+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Vitex+doniana+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -940,7 +994,7 @@
       "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Tapinanthus+pentagonia+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Vitex+doniana+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
@@ -1007,7 +1061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
