--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -623,7 +623,34 @@
        " 'Tamarix senegalensis',\n",
        " 'Tapinanthus dodoneifolius',\n",
        " 'Tapinanthus globiferus',\n",
-       " 'Tapinanthus pentagonia']"
+       " 'Tapinanthus pentagonia',\n",
+       " 'Tapinanthus voltensis',\n",
+       " 'Tectona grandis',\n",
+       " 'Tephrosia vogelii',\n",
+       " 'Terminalia albida',\n",
+       " 'Terminalia avicennioides',\n",
+       " 'Terminalia brownii',\n",
+       " 'Terminalia catappa',\n",
+       " 'Terminalia laxiflora',\n",
+       " 'Terminalia macroptera',\n",
+       " 'Terminalia mantaly',\n",
+       " 'Terminalia mollis',\n",
+       " 'Terminalia schimperiana',\n",
+       " 'Tetracera alnifolia',\n",
+       " 'Thevetia neriifolia',\n",
+       " 'Tinospora bakis',\n",
+       " 'Trema orientalis',\n",
+       " 'Tricalysia okelensis',\n",
+       " 'Trichilia emetica',\n",
+       " 'Uapaca togoensis',\n",
+       " 'Uvaria chamae',\n",
+       " 'Vepris heterophylla',\n",
+       " 'Vernonia amygdalina',\n",
+       " 'Vernonia colorata',\n",
+       " 'Vernonia thomsoniana',\n",
+       " 'Vitellaria paradoxa',\n",
+       " 'Vitex chrysocarpa',\n",
+       " 'Vitex doniana']"
       ]
      },
      "execution_count": 6,
@@ -973,28 +1000,41 @@
       "Tamarix senegalensis done\n",
       "Tapinanthus dodoneifolius done\n",
       "Tapinanthus globiferus done\n",
-      "Tapinanthus pentagonia done\n"
+      "Tapinanthus pentagonia done\n",
+      "Tapinanthus voltensis done\n",
+      "Tectona grandis done\n",
+      "Tephrosia vogelii done\n",
+      "Terminalia albida done\n",
+      "Terminalia avicennioides done\n",
+      "Terminalia brownii done\n",
+      "Terminalia catappa done\n",
+      "Terminalia laxiflora done\n",
+      "Terminalia macroptera done\n",
+      "Terminalia mantaly done\n",
+      "Terminalia mollis done\n",
+      "Terminalia schimperiana done\n",
+      "Tetracera alnifolia done\n",
+      "Thevetia neriifolia done\n",
+      "Tinospora bakis done\n",
+      "Trema orientalis done\n",
+      "Tricalysia okelensis done\n",
+      "Trichilia emetica done\n",
+      "Uapaca togoensis done\n",
+      "Uvaria chamae done\n",
+      "Vepris heterophylla done\n",
+      "Vernonia amygdalina done\n",
+      "Vernonia colorata done\n",
+      "Vernonia thomsoniana done\n",
+      "Vitellaria paradoxa done\n",
+      "Vitex chrysocarpa done\n",
+      "Vitex doniana done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 96%|█████████▋| 348/361 [00:43<00:01,  8.07it/s] \n"
-     ]
-    },
-    {
-     "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Vitex+doniana+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mplantnet\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m plantnet_species_google[plantnet] \u001b[39m=\u001b[39m search_results\n",
-      "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Vitex+doniana+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "100%|██████████| 361/361 [00:20<00:00, 17.76it/s] \n"
      ]
     }
    ],
