--- a/notebooks/reports/surveys/1.0_survey_analyses.ipynb
+++ b/notebooks/reports/surveys/1.0_survey_analyses.ipynb
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "id": "673f7afe",
    "metadata": {},
    "outputs": [
@@ -2514,8 +2514,8 @@
            1
           ]
          },
-         "hole": 0.4,
-         "hoverinfo": "label+percent+name",
+         "hole": 0.6,
+         "hoverinfo": "label+percent",
          "labels": [
           "None of the above",
           "Can infer correct Entity",
@@ -2551,8 +2551,8 @@
            1
           ]
          },
-         "hole": 0.4,
-         "hoverinfo": "label+percent+name",
+         "hole": 0.6,
+         "hoverinfo": "label+percent",
          "labels": [
           "None of the above",
           "Can infer correct Entity",
@@ -2588,8 +2588,8 @@
            1
           ]
          },
-         "hole": 0.4,
-         "hoverinfo": "label+percent+name",
+         "hole": 0.6,
+         "hoverinfo": "label+percent",
          "labels": [
           "None of the above",
           "Can infer correct Entity",
@@ -2616,6 +2616,35 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "font": {
+           "size": 15
+          },
+          "showarrow": false,
+          "text": "PlantNet Dataset",
+          "x": 0.09,
+          "y": 0.5
+         },
+         {
+          "font": {
+           "size": 15
+          },
+          "showarrow": false,
+          "text": "Palm Dataset",
+          "x": 0.5,
+          "y": 0.5
+         },
+         {
+          "font": {
+           "size": 15
+          },
+          "showarrow": false,
+          "text": "Caribbean Dataset",
+          "x": 0.915,
+          "y": 0.5
+         }
+        ],
         "template": {
          "data": {
           "bar": [
@@ -3462,7 +3491,14 @@
     "                    col=i+1, row=1)\n",
     "\n",
     "# Use `hole` to create a donut-like pie chart\n",
-    "fig.update_traces(hole=.4, hoverinfo=\"label+percent+name\")\n",
+    "fig.update_traces(hole=.6, hoverinfo=\"label+percent\")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    # Add annotations in the center of the donut pies.\n",
+    "    annotations=[dict(text='PlantNet Dataset',  x=0.09, y=0.5, font_size=15, showarrow=False),\n",
+    "                 dict(text='Palm Dataset',      x=0.500, y=0.5, font_size=15, showarrow=False),\n",
+    "                 dict(text='Caribbean Dataset', x=0.915, y=0.5, font_size=15, showarrow=False)]\n",
+    "                 )\n",
     "\n",
     "fig.show()"
    ]
