--- a/notebooks/reports/surveys/1.0_survey_analyses.ipynb
+++ b/notebooks/reports/surveys/1.0_survey_analyses.ipynb
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "f7563511",
    "metadata": {},
    "outputs": [
@@ -2918,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "673f7afe",
    "metadata": {},
    "outputs": [
@@ -3934,7 +3934,14 @@
     "                 dict(text='Caribbean Dataset', x=0.915, y=0.5, font_size=15, showarrow=False)]\n",
     "                 )\n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "folder_figures = \"../../../reports/figures/\"\n",
+    "file_name = \"PxPlot_HTML_SurveysPerDataset.html\"\n",
+    "fig.write_html(F\"{folder_figures}{file_name}\")\n",
+    "file_name = \"PxPlot_PDF_SurveysPerDataset.pdf\"\n",
+    "fig.write_image(F\"{folder_figures}{file_name}\")\n",
+    "\n"
    ]
   }
  ],
