added single testing

--- a/notebooks/reports/OpenAI/2.0_urls_to_text.ipynb
+++ b/notebooks/reports/OpenAI/2.0_urls_to_text.ipynb
@@ -86,41 +86,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "URL:  70%|███████   | 28/40 [00:22<00:11,  1.03it/s]/it]/usr/local/anaconda3/envs/webscraping/lib/python3.10/site-packages/bs4/builder/__init__.py:545: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
+      "URL:  68%|██████▊   | 27/40 [00:31<00:11,  1.10it/s]39.02s/it]/usr/local/anaconda3/envs/webscraping/lib/python3.10/site-packages/bs4/__init__.py:435: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  warnings.warn(\n",
-      "Species: 100%|██████████| 42/42 [33:14<00:00, 47.50s/it]\n"
+      "Species: 100%|██████████| 361/361 [3:19:18<00:00, 33.13s/it]   \n"
      ]
     }
    ],
    "source": [
-    "caribbean_text_dict = extract_paragraphs_from_urls(caribbean_url_dict)\n",
+    "# caribbean_text_dict = extract_paragraphs_from_urls(caribbean_url_dict)\n",
     "# palms_text_dict = extract_paragraphs_from_urls(palms_url_dict)\n",
-    "# plantnet_text_dict = extract_paragraphs_from_urls(plantnet_url_dict)"
+    "plantnet_text_dict = extract_paragraphs_from_urls(plantnet_url_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_text = \"../../../data/OpenAI/TextSnippets/\"\n",
     "\n",
-    "with open(F\"{folder_text}paragraphs_caribbean.pkl\", 'wb') as f:\n",
-    "    pickle.dump(caribbean_text_dict, f)\n",
+    "# with open(F\"{folder_text}paragraphs_caribbean.pkl\", 'wb') as f:\n",
+    "#     pickle.dump(caribbean_text_dict, f)\n",
     "\n",
     "# with open(F\"{folder_text}paragraphs_palms.pkl\", 'wb') as f:\n",
     "#     pickle.dump(palms_text_dict, f)\n",
     "\n",
-    "# with open(F\"{folder_text}paragraphs_plantnet.pkl\", 'wb') as f:\n",
-    "#     pickle.dump(plantnet_text_dict, f)"
+    "with open(F\"{folder_text}paragraphs_plantnet.pkl\", 'wb') as f:\n",
+    "    pickle.dump(plantnet_text_dict, f)"
    ]
   },
   {
