--- a/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait.ipynb
+++ b/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait.ipynb
@@ -449,13 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "caribbean_traits_dict\n",
     "\n",
-    "trait = list(caribbean_traits_dict.keys())[8]\n",
+    "trait = list(caribbean_traits_dict.keys())[5]\n",
     "trait_options = caribbean_traits_dict[trait]"
    ]
   },
@@ -481,16 +481,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['not winged', 'winged']"
+       "['glabrous',\n",
+       " 'glabrous, pubescent',\n",
+       " 'pubescent',\n",
+       " 'pubescent, glabrous',\n",
+       " 'salt crystals',\n",
+       " 'scales, glabrous',\n",
+       " 'shiny, glabrous',\n",
+       " 'woolly, later glabrous']"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,13 +517,13 @@
     "\n",
     "question = question + example\n",
     "options = trait_options + [\"Other: description of trait not mentioned in the list.\"]\n",
-    "options = F\"\\nThe options with the {trait}:\\n{options}.\"\n",
+    "options = F\"\\nThe options with the '{trait}':\\n{options}.\"\n",
     "user_content = F\"{question} {options}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -533,19 +540,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Which of the following values correctly describe(s) the 'Leaf rachis' trait mentioned in the text? If none of the following values apply, please select 'None of the above'. Select all values you can find.\n",
+      "Which of the following values correctly describe(s) the 'Leaf upper side' trait mentioned in the text? If none of the following values apply, please select 'None of the above'. Select all values you can find.\n",
       "Please return the answers as a Python list like the example I provided:\n",
       "Example format:\n",
       "['tree', 'Other: palm-like'] \n",
-      "The options with the Leaf rachis:\n",
-      "['not winged', 'winged', 'Other: description of trait not mentioned in the list.'].\n"
+      "The options with the 'Leaf upper side':\n",
+      "['glabrous', 'glabrous, pubescent', 'pubescent', 'pubescent, glabrous', 'salt crystals', 'scales, glabrous', 'shiny, glabrous', 'woolly, later glabrous', 'Other: description of trait not mentioned in the list.'].\n"
      ]
     }
    ],
@@ -555,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,36 +580,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-6vnDuYnvewc7BWBkhZAJIq7LSX6If at 0x7fb078bb9a80> JSON: {\n",
+       "<OpenAIObject chat.completion id=chatcmpl-6vqBs9CpqfGqzgAinZ24tmfgZSx53 at 0x7fb06858b470> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"finish_reason\": \"stop\",\n",
        "      \"index\": 0,\n",
        "      \"message\": {\n",
-       "        \"content\": \"\\n\\nNone of the above. The trait 'Leaf rachis' is not mentioned in the text.\",\n",
+       "        \"content\": \"['dark green']\",\n",
        "        \"role\": \"assistant\"\n",
        "      }\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1679231930,\n",
-       "  \"id\": \"chatcmpl-6vnDuYnvewc7BWBkhZAJIq7LSX6If\",\n",
+       "  \"created\": 1679243336,\n",
+       "  \"id\": \"chatcmpl-6vqBs9CpqfGqzgAinZ24tmfgZSx53\",\n",
        "  \"model\": \"gpt-3.5-turbo-0301\",\n",
        "  \"object\": \"chat.completion\",\n",
        "  \"usage\": {\n",
-       "    \"completion_tokens\": 21,\n",
-       "    \"prompt_tokens\": 1135,\n",
-       "    \"total_tokens\": 1156\n",
+       "    \"completion_tokens\": 5,\n",
+       "    \"prompt_tokens\": 1182,\n",
+       "    \"total_tokens\": 1187\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
