--- a/notebooks/reports/OpenAI/2.1_text_cleaner.ipynb
+++ b/notebooks/reports/OpenAI/2.1_text_cleaner.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,21 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                               \r"
+      "                                                 \r"
      ]
     }
    ],
    "source": [
-    "caribbean_text_dict_filtered = filter_species_dict(caribbean_text_dict)\n",
+    "# caribbean_text_dict_filtered = filter_species_dict(caribbean_text_dict)\n",
     "# palms_text_dict_filtered = filter_species_dict(palms_text_dict)\n",
-    "# plantnet_text_dict_filtered = filter_species_dict(plantnet_text_dict)"
+    "plantnet_text_dict_filtered = filter_species_dict(plantnet_text_dict)"
    ]
   },
   {
@@ -127,14 +127,14 @@
    "source": [
     "folder_text = \"../../../data/OpenAI/TextSnippetsCleaned/\"\n",
     "\n",
-    "with open(F\"{folder_text}paragraphs_caribbean_cleaned.pkl\", 'wb') as f:\n",
-    "    pickle.dump(caribbean_text_dict_filtered, f)\n",
+    "# with open(F\"{folder_text}paragraphs_caribbean_cleaned.pkl\", 'wb') as f:\n",
+    "#     pickle.dump(caribbean_text_dict_filtered, f)\n",
     "\n",
     "# with open(F\"{folder_text}paragraphs_palms_cleaned.pkl\", 'wb') as f:\n",
     "#     pickle.dump(palms_text_dict_filtered, f)\n",
     "\n",
-    "# with open(F\"{folder_text}paragraphs_plantnet_cleaned.pkl\", 'wb') as f:\n",
-    "#     pickle.dump(plantnet_text_dict_filtered, f)"
+    "with open(F\"{folder_text}paragraphs_plantnet_cleaned.pkl\", 'wb') as f:\n",
+    "    pickle.dump(plantnet_text_dict_filtered, f)"
    ]
   }
  ],
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
