--- a/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait.ipynb
+++ b/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait.ipynb
@@ -108,16 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def combine_words_with_capital(string):\n",
     "    # remove non-alphanumeric characters\n",
-    "    string = re.sub(r'[^\\w\\s]', '', string)  \n",
-    "    # combine words with capitalization\n",
-    "    string = ''.join(word.capitalize() for word in string.split())  \n",
-    "    return string"
+    "    string = re.sub(r'[^\\w\\s/]', '', string)\n",
+    "    # split the string on the slash (\"/\")\n",
+    "    parts = string.split('/')\n",
+    "    # combine words with capitalization for each part\n",
+    "    parts = [''.join(word.capitalize() for word in part.split()) for part in parts]\n",
+    "    # join the parts with an empty string\n",
+    "    return ''.join(parts)"
    ]
   },
   {
@@ -167,14 +170,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4: Bursera simaruba:  92%|█████████▏| 22/24 [04:30<00:57, 28.80s/it]"
+      "                                                       "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Life form\n",
+      "LifeForm\n",
+      "Leaf position\n",
+      "LeafPosition\n",
+      "Leaf composition\n",
+      "LeafComposition\n",
+      "Leaf shape\n",
+      "LeafShape\n",
+      "Leaf margin\n",
+      "LeafMargin\n",
+      "Leaf upper side\n",
+      "LeafUpperSide\n",
+      "Leaf lower side\n",
+      "LeafLowerSide\n",
+      "Leaf glands\n",
+      "LeafGlands\n",
+      "Leaf rachis\n",
+      "LeafRachis\n",
+      "Thorns/spines\n",
+      "ThornsSpines\n",
+      "Stipules\n",
+      "Stipules\n",
+      "Inflorescence type\n",
+      "InflorescenceType\n",
+      "Sepals / calyx shape\n",
+      "SepalsCalyxShape\n",
+      "Sepals / calyx numer\n",
+      "SepalsCalyxNumer\n",
+      "Petals / corolla shape\n",
+      "PetalsCorollaShape\n",
+      "Petals / corolla number\n",
+      "PetalsCorollaNumber\n",
+      "Petals / corolla colour\n",
+      "PetalsCorollaColour\n",
+      "Stamen shape\n",
+      "StamenShape\n",
+      "Stamen number\n",
+      "StamenNumber\n",
+      "Fruit type\n",
+      "FruitType\n",
+      "Fruit shape\n",
+      "FruitShape\n",
+      "Fruit colour\n",
+      "FruitColour\n",
+      "Aril colour\n",
+      "ArilColour\n",
+      "Seed colour\n",
+      "SeedColour\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
      ]
     }
    ],
@@ -183,7 +247,7 @@
     "folder_prompts = \"../../../data/OpenAI/PromptsResults/\"\n",
     "\n",
     "# Loop over each JSON file in the list caribbean_jsons_paras\n",
-    "for idx, json_file in enumerate(caribbean_jsons_paras[0:6]):\n",
+    "for idx, json_file in enumerate(caribbean_jsons_paras[0:1]):\n",
     "\n",
     "    try:\n",
     "        # Try to read in the JSON file\n",
